--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,13 @@
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "all_frames": true,
         "js":      ["scripts/content.js"]
     }],
     "permissions": [
         "activeTab"
-    ]
+    ],
+    "background" : {
+        "page": "background.html"
+    }
 }
 
