--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,21 @@
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js":      ["scripts/content.js"]
+        "js":      [
+            "scripts/content.js"
+        ]
     }],
     "permissions": [
         "activeTab"
     ],
     "background" : {
         "page": "background.html"
-    }
+    },
+    "web_accessible_resources" : [
+        "scripts/jquery-3.1.1.min.js",
+        "scripts/contextMenu.min.js",
+        "scripts/alertify.js",
+        "css/contextMenu.min.css"
+    ]
 }
 
