--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 2,
-    "name": "UserSelecter",
-    "description": "Extension for removing selection lock on websites",
-    "version": "1.6",
+    "name": "CopyUnlocker",
+    "description": "Extension for unlocking selection/copy from websites",
+    "version": "1.7",
     "browser_action": {
         "default_icon": "favicon.png",
         "default_popup": "popup.html",
-        "default_title": "UserSelecter"
+        "default_title": "CopyUnlocker"
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
